--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -21,6 +21,9 @@ article, body > footer
 article
   background: reduce(2)
 
+footer a
+  color: #fefefe
+
 {% if site.dark_header %}
 
 body > header
