--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,3 +29,6 @@
 </header>
 
 {{ content }}
+
+
+<footer>&copy Addison Kimball 2019 <div>theme 'Contrast' by <a href="https://github.com/niklasbuschmann" style="">niklasbuschmann</a></div></footer>
