--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,4 +31,4 @@
 {{ content }}
 
 
-<footer>&copy Addison Kimball 2019 <div>theme 'Contrast' by <a href="https://github.com/niklasbuschmann" style="">niklasbuschmann</a></div></footer>
+<footer>&copy Addison Kimball 2019 <div><a href="https://github.com/niklasbuschmann">Contrast</a></div></footer>
