changed pic and bio and updated theme link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,4 +31,4 @@
 {{ content }}
 
 
-<footer>&copy Addison Kimball 2019 <div><a href="https://github.com/niklasbuschmann">Contrast</a></div></footer>
+<footer>&copy Addison Kimball 2019 <div><a href="https://github.com/niklasbuschmann/contrast">Contrast</a></div></footer>
